--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.1.0"
+    "pg": "^7.1.0",
+    "sweetalert": "^2.1.0"
   }
 }
